--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800;900&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./src/css/app.css">
     <link rel="stylesheet" href="./src/css/normalize.css.css">
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="header__wrapper">
             <a href="/" class="logo">
-                <img src="./src/images/logo.svg" alt="Logo Car Sharing Company" class="logo__img">
+                <img src="./src/images/Logo.svg" alt="Logo Car Sharing Company" class="logo__img">
                 <span class="logo__text logo__text--primary">CAR</span>
                 <span class="logo__text">Sharing</span>
             </a>
